# pp

./: .gitignore  CMakeLists.txt  README.md  build.sh
examples/: conv_demo.c  option_demo.c  split_demo.c  str_demo.c  string_demo.c
include/: function.h  stdarray.h  stdconv.h  stderr.h  stdfunc.h  stdopt.h  stdstr.h  stdstring.h  stdstring_view.h  stdvec.h
src/: function.c  stdconv.c  stdfunc.c  stdopt.c  stdstr.c  stdstring.c  stdstring_view.c  stdvec.c
